final commits for HW2

--- a/HW2/HW2blog.html
+++ b/HW2/HW2blog.html
@@ -26,6 +26,7 @@
                     I decided that I will work with one container/column. I didn't want to go 
                     into too much detail with trying to work with two columns. 
                 </p>
+                <h3>Content & Coding</h3>
                 <p>As far as creating forms in Bootstrap I had little to no knowledge on how to 
                     create one. I looked into the Bootstrap documentations and was able to find 
                     some guideance there. As I was going thorugh the code there were a few details 
@@ -37,6 +38,14 @@
                 </p>
                 <img src="images2\image1.png" width="400" height="90">
                 <img src="images2\image2.png">
+                <p>For the text boxes I had decided to display them in a list so that they would 
+                    be formatted one on top of the other on my site. I used an unordered list. My only 
+                    issue with this part of the code was that I wish I was able to have the little 
+                    bullet points removed but that is a problem to solve for another day for me. 
+                    Looking at the picture below you can see one of my text boxes being defined inside 
+                    of a list element "li".
+                </p>
+                <img src="images2\image10.png" width="400">
                 <p>My biggest challenge with this assignment was learning how to use Javascript. 
                     There was a lot of time spent trying to figure out if my user input was being 
                     received. Through much trial and error wit didn't variations of code it was 
@@ -44,7 +53,7 @@
                     function. Boy, how I have learned how helpful that little tool was! 
                 </p>
                 <img src="images2\image3.png" width="700" height="400">
-                <img src="images2\image4.png" width="500" height="200">
+                <img src="images2\image4.png" width="530" >
                 <p>In the picture above with the snip-bit of code, this shows how I was able to use 
                     the "console.log()" function to, in essence, debug my code and see where my user 
                     input was going after the "Submit" button was clicked. In the next picture above 
@@ -55,14 +64,39 @@
                     output in Javascript. I again used the "console.log()" (see image below) to make sure 
                     each element was receiving the correct input and it is.
                 </p>
-                <img src="images2\image5.png" width="530" height="200">
+                <img src="images2\image5.png" width="530" >
                 <p>Now my next challenge was to have the output appear on the html site. I wanted each 
                     input to be displayed in a list for the viewer to see. I also wanted there to be an 
                     option for the user to delete any one of the items in the list for when an assignment 
                     was completed. Naturally I made this more difficult to execute at the beginning of this 
                     process but I then came across a similar idea from a previous student. I have borrowed 
                     and modified some of that code from that student to help me with this section of my code. 
-                    
+                </p>
+                <img src="images2\image11.png" width="700">
+                <img src="images2\image12.png" width="600">
+                <p>The modifications that I did to this borrowed code was that I wanted my inputs (now back as 
+                    outputs) to be read of as a statement within the discription list. At the end of the statement 
+                    there is a "Assignment Complete" button. This will allow the user to remove an assignment 
+                    that is done. Here is where I have a technical error. The user is able to remove an assignment, 
+                    however, it removes the full list and when you go to enter in another assignment the code doesn't 
+                    work. For the time being I will have to leave it this way and when I have some extra time I will 
+                    come back to this and try to solve the issue. After you have press Assignment Complete, refreshing 
+                    the page will put the site back in working order (until you press that button again).</p>
+
+                <h3>Git Merging & the Command Line</h3>
+                <p>For this assignment we were to practice working on a feature branch and then merging that 
+                    branch back to our master branch. In the comman line we are able to see a visual of this 
+                    combination of branching and merging.
+                </p>
+                <img src="images2\image8.png" width="600">
+                <p>As I was submiting one of my previous commits you can see that the branch I was working 
+                    on was ahead of my master branch by a commit. I then typed in a few git commands to sync 
+                    my two branches back and prepared them for a merge (I forgot to grab a picture of that part).
+                </p>
+                <img src="images2\image9.png" width="600">
+                <p>After completing my push and sync of my branches to git I went ahead and typed in a command 
+                    to view a graph of the branching that occured in this homework assignment (as pictured above). 
+                    As you can see to the far left of the image there is a visual of the branching.
                 </p>
             </div>
         </body>
