final commits for HW2

--- a/HW2/HW2blog.html
+++ b/HW2/HW2blog.html
@@ -6,7 +6,7 @@
 
         <body>
             <div class = "container">
-                <h1>Homework 1 process</h1>
+                <h1>Homework 2 process</h1>
                 <p>This page shows the steps and processes I took in developing and 
                     creating this assignment.
                 </p>
@@ -15,16 +15,16 @@
                 <p>At the start of this assignment we each were to think of an idea
                     for a form that would take in user input, do some sort of calculation
                     and then provide an output to the user. This took me a while to think
-                    of an idea as I wanted to keep it simple. I thought to myself what is
+                    of an idea as I wanted to keep it simple. I thought to myself, what is
                     something that would be useful for me to use right now? Then it clicked!
                     I had decided that I would create a homework tracker. Below is a rough 
                     sketch on what I wanted to create.    
                 </p>
                 <img src="images2\HW2sketch.jpg" width="400" height="500">
-                <p>I decided to call this tracker On Time! It only made sense because the goal 
+                <p>I decided to call this tracker "On Time!" It only made sense because the goal 
                     for students is to turn in their assignments on time as often as possible. 
-                    I decided that I will work with one container/column. I didn't want to go 
-                    into too much detail with trying to work with two columns. 
+                    I decided that I would work with one container/column. I didn't want to go 
+                    into too much detail with trying to work with two or more columns. 
                 </p>
                 <h3>Content & Coding</h3>
                 <p>As far as creating forms in Bootstrap I had little to no knowledge on how to 
@@ -41,14 +41,14 @@
                 <p>For the text boxes I had decided to display them in a list so that they would 
                     be formatted one on top of the other on my site. I used an unordered list. My only 
                     issue with this part of the code was that I wish I was able to have the little 
-                    bullet points removed but that is a problem to solve for another day for me. 
+                    bullet points removed for visual purposes but that is a problem to solve for another day for me. 
                     Looking at the picture below you can see one of my text boxes being defined inside 
                     of a list element "li".
                 </p>
                 <img src="images2\image10.png" width="400">
                 <p>My biggest challenge with this assignment was learning how to use Javascript. 
                     There was a lot of time spent trying to figure out if my user input was being 
-                    received. Through much trial and error wit didn't variations of code it was 
+                    received. Through much trial and error with different variations of code, it was 
                     brought to my attention by one of my classmates to use the "console.log()" 
                     function. Boy, how I have learned how helpful that little tool was! 
                 </p>
@@ -57,8 +57,8 @@
                 <p>In the picture above with the snip-bit of code, this shows how I was able to use 
                     the "console.log()" function to, in essence, debug my code and see where my user 
                     input was going after the "Submit" button was clicked. In the next picture above 
-                    you can see in the Developer Tools were my "console.log()" is printing out its 
-                    information.The first four lines in my console window show that the code is running 
+                    you can see in the Developer Tools where my "console.log()" is printing out its 
+                    information. The first four lines in my console window show that the code is running 
                     through each line in my function submitAssign() and showing the values from each text 
                     box after the submit button has been clicked on. The next four lines are for my 
                     output in Javascript. I again used the "console.log()" (see image below) to make sure 
@@ -77,15 +77,15 @@
                 <p>The modifications that I did to this borrowed code was that I wanted my inputs (now back as 
                     outputs) to be read of as a statement within the discription list. At the end of the statement 
                     there is a "Assignment Complete" button. This will allow the user to remove an assignment 
-                    that is done. Here is where I have a technical error. The user is able to remove an assignment, 
+                    that is done. Here is where I have a technical issue. The user is able to remove an assignment, 
                     however, it removes the full list and when you go to enter in another assignment the code doesn't 
                     work. For the time being I will have to leave it this way and when I have some extra time I will 
-                    come back to this and try to solve the issue. After you have press Assignment Complete, refreshing 
+                    come back to this and try to solve the issue. After you have pressed Assignment Complete, refreshing 
                     the page will put the site back in working order (until you press that button again).</p>
 
                 <h3>Git Merging & the Command Line</h3>
-                <p>For this assignment we were to practice working on a feature branch and then merging that 
-                    branch back to our master branch. In the comman line we are able to see a visual of this 
+                <p>For this assignment we were to practice working on a feature branch and then merge that 
+                    branch back to our master branch. In the command line we are able to see a visual of this 
                     combination of branching and merging.
                 </p>
                 <img src="images2\image8.png" width="600">
@@ -94,7 +94,7 @@
                     my two branches back and prepared them for a merge (I forgot to grab a picture of that part).
                 </p>
                 <img src="images2\image9.png" width="600">
-                <p>After completing my push and sync of my branches to git I went ahead and typed in a command 
+                <p>After completing my sync and push of my branches to git I went ahead and typed in a command 
                     to view a graph of the branching that occured in this homework assignment (as pictured above). 
                     As you can see to the far left of the image there is a visual of the branching.
                 </p>
